--- a/src/sass/halcyon.scss
+++ b/src/sass/halcyon.scss
@@ -11,4 +11,15 @@
 * Have fun using
 */
 
+/**
+  _    _       _                                      
+ | |  | |     | |                                     
+ | |__| | __ _| | ___ _   _  ___  _ __    ___ ___ ___ 
+ |  __  |/ _` | |/ __| | | |/ _ \| '_ \  / __/ __/ __|
+ | |  | | (_| | | (__| |_| | (_) | | | || (__\__ \__ \
+ |_|  |_|\__,_|_|\___|\__, |\___/|_| |_(_\___|___|___/
+                       __/ |                          
+                      |___/                           
+*/
+
 @import 'root/root'; // Assemble everything
