--- a/src/sass/halcyon.scss
+++ b/src/sass/halcyon.scss
@@ -20,6 +20,30 @@
  |_|  |_|\__,_|_|\___|\__, |\___/|_| |_(_\___|___|___/
                        __/ |                          
                       |___/                           
+
+
+            _____                   _____                   _____    _____            _____                  _______                  _____                   _____                   _____                   _____          
+         /\    \                 /\    \                 /\    \  /\    \          |\    \                /::\    \                /\    \                 /\    \                 /\    \                 /\    \         
+        /::\____\               /::\    \               /::\____\/::\    \         |:\____\              /::::\    \              /::\____\               /::\    \               /::\    \               /::\    \        
+       /:::/    /              /::::\    \             /:::/    /::::\    \        |::|   |             /::::::\    \            /::::|   |              /::::\    \             /::::\    \             /::::\    \       
+      /:::/    /              /::::::\    \           /:::/    /::::::\    \       |::|   |            /::::::::\    \          /:::::|   |             /::::::\    \           /::::::\    \           /::::::\    \      
+     /:::/    /              /:::/\:::\    \         /:::/    /:::/\:::\    \      |::|   |           /:::/~~\:::\    \        /::::::|   |            /:::/\:::\    \         /:::/\:::\    \         /:::/\:::\    \     
+    /:::/____/              /:::/__\:::\    \       /:::/    /:::/  \:::\    \     |::|   |          /:::/    \:::\    \      /:::/|::|   |           /:::/  \:::\    \       /:::/__\:::\    \       /:::/__\:::\    \    
+   /::::\    \             /::::\   \:::\    \     /:::/    /:::/    \:::\    \    |::|   |         /:::/    / \:::\    \    /:::/ |::|   |          /:::/    \:::\    \      \:::\   \:::\    \      \:::\   \:::\    \   
+  /::::::\    \   _____   /::::::\   \:::\    \   /:::/    /:::/    / \:::\    \   |::|___|______  /:::/____/   \:::\____\  /:::/  |::|   | _____   /:::/    / \:::\    \   ___\:::\   \:::\    \   ___\:::\   \:::\    \  
+ /:::/\:::\    \ /\    \ /:::/\:::\   \:::\    \ /:::/    /:::/    /   \:::\    \  /::::::::\    \|:::|    |     |:::|    |/:::/   |::|   |/\    \ /:::/    /   \:::\    \ /\   \:::\   \:::\    \ /\   \:::\   \:::\    \ 
+/:::/  \:::\    /::\____/:::/  \:::\   \:::\____/:::/____/:::/____/     \:::\____\/::::::::::\____|:::|____|     |:::|    /:: /    |::|   /::\____/:::/____/     \:::\____/::\   \:::\   \:::\____/::\   \:::\   \:::\____\
+\::/    \:::\  /:::/    \::/    \:::\  /:::/    \:::\    \:::\    \      \::/    /:::/~~~~/~~      \:::\    \   /:::/    /\::/    /|::|  /:::/    \:::\    \      \::/    \:::\   \:::\   \::/    \:::\   \:::\   \::/    /
+ \/____/ \:::\/:::/    / \/____/ \:::\/:::/    / \:::\    \:::\    \      \/____/:::/    /          \:::\    \ /:::/    /  \/____/ |::| /:::/    / \:::\    \      \/____/ \:::\   \:::\   \/____/ \:::\   \:::\   \/____/ 
+          \::::::/    /           \::::::/    /   \:::\    \:::\    \          /:::/    /            \:::\    /:::/    /           |::|/:::/    /   \:::\    \              \:::\   \:::\    \      \:::\   \:::\    \     
+           \::::/    /             \::::/    /     \:::\    \:::\    \        /:::/    /              \:::\__/:::/    /            |::::::/    /     \:::\    \              \:::\   \:::\____\      \:::\   \:::\____\    
+           /:::/    /              /:::/    /       \:::\    \:::\    \       \::/    /                \::::::::/    /             |:::::/    /       \:::\    \              \:::\  /:::/    /       \:::\  /:::/    /    
+          /:::/    /              /:::/    /         \:::\    \:::\    \       \/____/                  \::::::/    /              |::::/    /         \:::\    \              \:::\/:::/    /         \:::\/:::/    /     
+         /:::/    /              /:::/    /           \:::\    \:::\    \                                \::::/    /               /:::/    /           \:::\    \              \::::::/    /           \::::::/    /      
+        /:::/    /              /:::/    /             \:::\____\:::\____\                                \::/____/               /:::/    /             \:::\____\              \::::/    /             \::::/    /       
+        \::/    /               \::/    /               \::/    /\::/    /                                 ~~                     \::/    /               \::/    /               \::/    /               \::/    /        
+         \/____/                 \/____/                 \/____/  \/____/                                                          \/____/                 \/____/                 \/____/                 \/____/         
+                                                                                                                                                                                                                           
 */
 
 @import 'root/root'; // Assemble everything
