Update buttons and backgrounds

--- a/src/sass/backgrounds/_backgrounds.scss
+++ b/src/sass/backgrounds/_backgrounds.scss
@@ -55,3 +55,188 @@
 {
     background-color: $purple;
 }
+
+.btn-navy
+{
+    background-color: $navy;
+}
+
+.bg-orange
+{
+    background-color: $orange;
+}
+
+.bg-yellow
+{
+    background-color: $yellow;
+}
+
+.bg-brown
+{
+    background-color: $brown;
+}
+
+.bg-teal
+{
+    background-color: $teal;
+}
+
+.bg-maroon
+{
+    background-color: $maroon;
+}
+
+.bg-olive
+{
+    background-color: $olive;
+}
+
+.bg-lime
+{
+    background-color: $lime;
+}
+
+.bg-indigo
+{
+    background-color: $indigo;
+}
+
+.bg-skyblue
+{
+    background-color: $skyblue;
+}
+
+.bg-darkblue
+{
+    background-color: $darkblue;
+}
+
+.bg-darkgreen
+{
+    background-color: $darkgreen;
+}
+
+.bg-darkred
+{
+    background-color: $darkred;
+}
+
+.bg-darkgrey
+{
+    background-color: $darkgrey;
+}
+
+.bg-darkpurple
+{
+    background-color: $darkpurple;
+}
+
+.bg-darkpink
+{
+    background-color: $darkpink;
+}
+
+.bg-darkorange
+{
+    background-color: $darkorange;
+}
+
+.bg-darkyellow
+{
+    background-color: $darkyellow;
+}
+
+.bg-darkbrown
+{
+    background-color: $darkbrown;
+}
+
+.bg-darkteal
+{
+    background-color: $darkteal;
+}
+
+.bg-darkmaroon
+{
+    background-color: $darkmaroon;
+}
+
+.bg-darkolive
+{
+    background-color: $darkolive;
+}
+
+.bg-darklime
+{
+    background-color: $darklime;
+}
+
+.bg-darkindigo
+{
+    background-color: $darkindigo;
+}
+
+.bg-darkskyblue
+{
+    background-color: $darkskyblue;
+}
+
+.bg-lightgrey
+{
+    background-color: $lightgrey;
+}
+
+.bg-lightpurple
+{
+    background-color: $lightpurple;
+}
+
+.bg-lightpink
+{
+    background-color: $lightpink;
+}
+
+.bg-lightorange
+{
+    background-color: $lightorange;
+}
+
+.bg-lightyellow
+{
+    background-color: $lightyellow;
+}
+
+.bg-lightbrown
+{
+    background-color: $lightbrown;
+}
+
+.bg-lightteal
+{
+    background-color: $lightteal;
+}
+
+.bg-lightmaroon
+{
+    background-color: $lightmaroon;
+}
+
+.bg-lightolive
+{
+    background-color: $lightolive;
+}
+
+.bg-lightlime
+{
+    background-color: $lightlime;
+}
+
+.bg-lightindigo
+{
+    background-color: $lightindigo;
+}
+
+.bg-lightskyblue
+{
+    background-color: $lightskyblue;
+}
