--- a/src/sass/buttons/_buttons.scss
+++ b/src/sass/buttons/_buttons.scss
@@ -98,6 +98,228 @@
     box-shadow: 1px 1px 1px 2px darken($white, 10);
 }
 
+.btn-navy
+{
+    background-color: $navy;
+    @extend .default;
+}
+
+.btn-orange
+{
+    background-color: $orange;
+    @extend .default;
+}
+
+.btn-yellow
+{
+    background-color: $yellow;
+    @extend .default;
+}
+
+.btn-brown
+{
+    background-color: $brown;
+    @extend .default;
+}
+
+.btn-teal
+{
+    background-color: $teal;
+    @extend .default;
+}
+
+.btn-maroon
+{
+    background-color: $maroon;
+    @extend .default;
+}
+
+.btn-olive
+{
+    background-color: $olive;
+    @extend .default;
+}
+
+.btn-lime
+{
+    background-color: $lime;
+    @extend .default;
+}
+
+.btn-indigo
+{
+    background-color: $indigo;
+    @extend .default;
+}
+
+.btn-skyblue
+{
+    background-color: $skyblue;
+    @extend .default;
+}
+
+.btn-darkblue
+{
+    background-color: $darkblue;
+    @extend .default;
+}
+
+.btn-darkgreen
+{
+    background-color: $darkgreen;
+    @extend .default;
+}
+
+.btn-darkred
+{
+    background-color: $darkred;
+    @extend .default;
+}
+
+.btn-darkgrey
+{
+    background-color: $darkgrey;
+    @extend .default;
+}
+
+.btn-darkpurple
+{
+    background-color: $darkpurple;
+    @extend .default;
+}
+
+.btn-darkpink
+{
+    background-color: $darkpink;
+    @extend .default;
+}
+
+.btn-darkorange
+{
+    background-color: $darkorange;
+    @extend .default;
+}
+
+.btn-darkyellow
+{
+    background-color: $darkyellow;
+    @extend .default;
+}
+
+.btn-darkbrown
+{
+    background-color: $darkbrown;
+    @extend .default;
+}
+
+.btn-darkteal
+{
+    background-color: $darkteal;
+    @extend .default;
+}
+
+.btn-darkmaroon
+{
+    background-color: $darkmaroon;
+    @extend .default;
+}
+
+.btn-darkolive
+{
+    background-color: $darkolive;
+    @extend .default;
+}
+
+.btn-darklime
+{
+    background-color: $darklime;
+    @extend .default;
+}
+
+.btn-darkindigo
+{
+    background-color: $darkindigo;
+    @extend .default;
+}
+
+.btn-darkskyblue
+{
+    background-color: $darkskyblue;
+    @extend .default;
+}
+
+.btn-lightgrey
+{
+    background-color: $lightgrey;
+    @extend .default;
+}
+
+.btn-lightpurple
+{
+    background-color: $lightpurple;
+    @extend .default;
+}
+
+.btn-lightpink
+{
+    background-color: $lightpink;
+    @extend .default;
+}
+
+.btn-lightorange
+{
+    background-color: $lightorange;
+    @extend .default;
+}
+
+.btn-lightyellow
+{
+    background-color: $lightyellow;
+    @extend .default;
+}
+
+.btn-lightbrown
+{
+    background-color: $lightbrown;
+    @extend .default;
+}
+
+.btn-lightteal
+{
+    background-color: $lightteal;
+    @extend .default;
+}
+
+.btn-lightmaroon
+{
+    background-color: $lightmaroon;
+    @extend .default;
+}
+
+.btn-lightolive
+{
+    background-color: $lightolive;
+    @extend .default;
+}
+
+.btn-lightlime
+{
+    background-color: $lightlime;
+    @extend .default;
+}
+
+.btn-lightindigo
+{
+    background-color: $lightindigo;
+    @extend .default;
+}
+
+.btn-lightskyblue
+{
+    background-color: $lightskyblue;
+    @extend .default;
+}
+
 .btn-black
 {
     background-color: $black;
