--- a/src/sass/colors/_colors.scss
+++ b/src/sass/colors/_colors.scss
@@ -36,14 +36,14 @@ $darkred: #8b0000;
 $darkgrey: #a9a9a9;
 $darkpurple: #4b0082;
 $darkpink: #ff1493;
-$darkorange: #ff9411;
+$darkorange: #e28b20;
 $darkyellow: #ffdd1c;
-$darkbrown: #8b4513;
-$darkteal: #008b8b;
+$darkbrown: #a5541b;
+$darkteal: #0a9090;
 $darkmaroon: #800000;
 $darkolive: #556b2f;
 $darklime: #32cd32;
-$darkindigo: #4b0082;
+$darkindigo: #510885;
 $darkskyblue: #0faee4;
 $lightgrey: #c5bfbf;
 $lightpurple: #9677d3;
@@ -52,8 +52,8 @@ $lightorange: #f2ac2b;
 $lightyellow: #ffffe0;
 $lightbrown: #d7b07d;
 $lightteal: #38cfc0;
-$lightmaroon: #b33f69;
-$lightolive: #bdb76b;
-$lightlime: #90ee90;
-$lightindigo: #9b7fd3;
-$lightskyblue: #95cef2;
+$lightmaroon: #ce4d7c;
+$lightolive: #cec874;
+$lightlime: #76d676;
+$lightindigo: #9e79e8;
+$lightskyblue: #83c0e5;
