Modify colors and add lighting and darkening classes

--- a/src/sass/buttons/_buttons.scss
+++ b/src/sass/buttons/_buttons.scss
@@ -16,7 +16,7 @@
     align-content: center;
     justify-content: center;
     justify-items: center;
-    padding: 15px 15px;
+    padding: 10px;
     color: $white;
     font-weight: 600;
     border-radius: 10px;
