--- a/src/sass/colors/_colors.scss
+++ b/src/sass/colors/_colors.scss
@@ -20,21 +20,21 @@ $gold: #c1b20e;
 $grey: #a3a3a3;
 $red: #c02828;
 $purple: #4b036e;
-$navy: #000612;
+$navy: #00030a;
 $orange: #ed7e0f;
 $yellow: #e5e513;
 $brown: #964b00;
-$teal: #008080;
-$maroon: #770404;
-$olive: #808000;
+$teal: #0b7272;
+$maroon: #5f0909;
+$olive: #848406;
 $lime: #1bf71b;
-$indigo: #4b077c;
+$indigo: #3a0460;
 $skyblue: #9cddf7;
 $darkblue: #00008b;
 $darkgreen: #025a02;
-$darkred: #8b0000;
+$darkred: #680202;
 $darkgrey: #a9a9a9;
-$darkpurple: #4b0082;
+$darkpurple: #3b085f;
 $darkpink: #ff1493;
 $darkorange: #e28b20;
 $darkyellow: #ffdd1c;
@@ -43,8 +43,8 @@ $darkteal: #0a9090;
 $darkmaroon: #800000;
 $darkolive: #556b2f;
 $darklime: #32cd32;
-$darkindigo: #510885;
-$darkskyblue: #0faee4;
+$darkindigo: #200235;
+$darkskyblue: #0ba3d5;
 $lightgrey: #c5bfbf;
 $lightpurple: #9677d3;
 $lightpink: #de8d99;
@@ -54,6 +54,6 @@ $lightbrown: #d7b07d;
 $lightteal: #38cfc0;
 $lightmaroon: #ce4d7c;
 $lightolive: #cec874;
-$lightlime: #76d676;
-$lightindigo: #9e79e8;
+$lightlime: #73e173;
+$lightindigo: #8867cb;
 $lightskyblue: #83c0e5;
