--- a/src/sass/root/_root.scss
+++ b/src/sass/root/_root.scss
@@ -16,6 +16,8 @@
 @import '../effects/effects';
 @import '../animations/anime';
 @import '../functions/functions';
+@import '../responsiveness/responsiveness';
+
 
 /* Resets and defaults */
 
@@ -134,3 +136,6 @@ form
 }
 
 }
+
+
+
